--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "config": {
-    "tokenpath": "token.txt"
+    "tokenpath": "/run/secrets/telegramlockbot-token.txt"
   },
   "repository": {
     "type": "git",
