--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
 		"@edjopato/datastore": "^0.3.2",
 		"json-stable-stringify": "^1.0.1",
 		"telegraf": "^3.38.0",
-		"telegram-format": "^2.0.0",
-		"telegram-typings": "^3.6.1"
+		"telegram-format": "^2.0.0"
 	},
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^0.7.0",
 		"@types/node": "^14.0.25",
 		"del-cli": "^3.0.0",
 		"ts-node": "^9.0.0",
+		"typegram": "^2.2.2",
 		"typescript": "^4.0.2",
 		"xo": "^0.33.1"
 	},
