--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"node": ">=14"
 	},
 	"scripts": {
-		"build": "del dist && tsc",
+		"build": "del-cli dist && tsc",
 		"prepack": "npm run build",
 		"start": "ts-node source/index.ts",
 		"test": "tsc && xo"
