--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 	"dependencies": {
 		"@edjopato/datastore": "^0.3.2",
 		"json-stable-stringify": "^1.0.1",
-		"telegraf": "^3.38.0",
+		"telegraf": "^4.0.0",
+		"telegraf-middleware-console-time": "^2.0.0",
 		"telegram-format": "^2.0.0"
 	},
 	"devDependencies": {
@@ -32,7 +33,7 @@
 		"ts-node": "^9.0.0",
 		"typegram": "^3.0.2",
 		"typescript": "^4.1.2",
-		"xo": "^0.36.1"
+		"xo": "^0.37.1"
 	},
 	"xo": {
 		"semicolon": false,
