--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
 	},
 	"scripts": {
 		"build": "del-cli dist && tsc",
-		"prepack": "npm run build",
 		"start": "ts-node source/index.ts",
-		"test": "tsc && xo"
+		"test": "tsc --sourceMap && xo"
 	},
 	"dependencies": {
 		"@edjopato/datastore": "^0.3.2",
 		"json-stable-stringify": "^1.0.1",
+		"source-map-support": "^0.5.19",
 		"telegraf": "^4.0.0",
 		"telegraf-middleware-console-time": "^2.0.0",
 		"telegram-format": "^2.0.0"
