--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
 		"ts-node": "^9.0.0",
 		"typegram": "^3.0.2",
 		"typescript": "^4.1.2",
-		"xo": "^0.38.1"
+		"xo": "^0.39.1"
 	},
 	"xo": {
 		"semicolon": false,
 		"rules": {
+			"@typescript-eslint/no-non-null-assertion": "off",
 			"ava/no-ignored-test-files": "off"
 		}
 	}
