--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"start": "ts-node source/index.ts",
 		"test": "tsc --sourceMap && xo"
 	},
+	"type": "module",
 	"engines": {
 		"node": ">=14"
 	},
@@ -27,19 +28,23 @@
 		"telegram-format": "^2.0.0"
 	},
 	"devDependencies": {
-		"@sindresorhus/tsconfig": "^0.8.0",
+		"@sindresorhus/tsconfig": "^1.0.1",
 		"@types/node": "^15.0.1",
 		"del-cli": "^3.0.0",
 		"ts-node": "^9.0.0",
 		"typegram": "^3.0.2",
-		"typescript": "^4.1.2",
+		"typescript": "^4.2.3",
 		"xo": "^0.39.1"
 	},
 	"xo": {
 		"semicolon": false,
 		"rules": {
 			"@typescript-eslint/no-non-null-assertion": "off",
-			"ava/no-ignored-test-files": "off"
+			"ava/no-ignored-test-files": "off",
+			"import/extensions": [
+				"error",
+				"ignorePackages"
+			]
 		}
 	}
 }
