--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
 	},
 	"dependencies": {
 		"@edjopato/datastore": "^0.3.2",
+		"grammy": "^1.2.0",
 		"json-stable-stringify": "^1.0.1",
 		"source-map-support": "^0.5.19",
-		"telegraf": "^4.1.0",
-		"telegraf-middleware-console-time": "^2.0.0",
+		"telegraf-middleware-console-time": "^2.1.0",
 		"telegram-format": "^2.0.0"
 	},
 	"devDependencies": {
@@ -32,7 +32,6 @@
 		"@types/node": "^15.0.1",
 		"del-cli": "^4.0.0",
 		"ts-node": "^10.0.0",
-		"typegram": "^3.0.2",
 		"typescript": "^4.2.3",
 		"xo": "^0.40.1"
 	},
