--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
 		"del-cli": "^4.0.0",
 		"ts-node": "^10.0.0",
 		"typescript": "^4.2.3",
-		"xo": "^0.42.0"
+		"xo": "^0.44.0"
 	},
 	"xo": {
 		"semicolon": false,
 		"rules": {
 			"ava/no-ignored-test-files": "off",
+			"node/prefer-global/process": "off",
 			"unicorn/prefer-node-protocol": "off",
 			"import/extensions": [
 				"error",
