--- a/package.json
+++ b/package.json
@@ -21,23 +21,25 @@
 	},
 	"dependencies": {
 		"@edjopato/datastore": "^0.4.0",
-		"grammy": "^1.2.0",
+		"grammy": "^1.3.4",
 		"json-stable-stringify": "^1.0.1",
 		"source-map-support": "^0.5.19",
 		"telegraf-middleware-console-time": "^2.1.0",
 		"telegram-format": "^2.0.0"
 	},
 	"devDependencies": {
+		"@grammyjs/types": "^2.2.6",
 		"@sindresorhus/tsconfig": "^2.0.0",
 		"@types/node": "^16.0.0",
 		"del-cli": "^4.0.0",
 		"ts-node": "^10.0.0",
 		"typescript": "^4.2.3",
-		"xo": "^0.44.0"
+		"xo": "^0.46.3"
 	},
 	"xo": {
 		"semicolon": false,
 		"rules": {
+			"@typescript-eslint/naming-convention": "off",
 			"ava/no-ignored-test-files": "off",
 			"node/prefer-global/process": "off",
 			"unicorn/prefer-node-protocol": "off",
