--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"scripts": {
 		"build": "del-cli dist && tsc",
-		"start": "node --loader ts-node/esm source/index.ts",
+		"start": "tsc --sourceMap && node --enable-source-maps dist/index.js",
 		"test": "tsc --sourceMap && xo"
 	},
 	"type": "module",
@@ -31,7 +31,6 @@
 		"@sindresorhus/tsconfig": "^3.0.1",
 		"@types/node": "^16.0.0",
 		"del-cli": "^4.0.0",
-		"ts-node": "^10.0.0",
 		"typescript": "^4.2.3",
 		"xo": "^0.48.0"
 	},
