--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,6 +7,10 @@ on:
   schedule:
     - cron: '42 2 * * 6' # weekly on Saturday 2:42 UTC
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -33,7 +37,7 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: docker/build-push-action@v3
+      - uses: docker/build-push-action@v4
         with:
           platforms: linux/amd64, linux/arm64/v8
           push: ${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') }}
