--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 	"dependencies": {
 		"@edjopato/datastore": "^0.7.0",
 		"grammy": "^1.10.1",
-		"json-stable-stringify": "^1.0.1",
 		"telegraf-middleware-console-time": "^2.1.0",
 		"telegram-format": "^3.0.0"
 	},
@@ -29,11 +28,12 @@
 		"@sindresorhus/tsconfig": "^5.0.0",
 		"@types/node": "^18.0.3",
 		"typescript": "^5.0.4",
-		"xo": "^0.56.0"
+		"xo": "^0.57.0"
 	},
 	"xo": {
 		"rules": {
-			"@typescript-eslint/naming-convention": "off"
+			"@typescript-eslint/naming-convention": "off",
+			"unicorn/prevent-abbreviations": "off"
 		}
 	}
 }
