build: require Node.js 22 and base container on alpine 3.21

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,13 @@
 .*
 *.md
 **/*.test.*
-botfather-settings
-coverage
+**/test.*
 dist
 Dockerfile
 node_modules
 test
+
+botfather-settings
 
 # botfiles
 locks
